# master-3-smoother-scroll

./: Cargo.toml  README.md  config.json
src/: app_config.rs  main.rs
